# neural_wfa

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  convert_py_to_ipynb.py  pyproject.toml
docs/: comprehensive_refactoring_audit.md  hash_encoding_benchmarks.md  hash_encoding_benchmarks_raw.txt  hash_encoding_improvements.md  hash_encoding_report.md  performance_improvements.md  refactoring_plan_magnetic_field.md  uncertainty_analysis.md
example/: run_example.ipynb  run_example_explicit.ipynb  run_example_neuralfield.ipynb
example_py/: compare_explicit.py  legacy_explicit.py  legacy_explicit_time.py  legacy_neuralfield.py  prob_explicit.py  refactored_explicit.py  refactored_explicit_time.py  refactored_neural.py  refactored_neural_hash.py  refactored_neural_hash_time.py  refactored_neural_time.py
examples_ipynb/: explicit.ipynb  explicit_time.ipynb  legacy_explicit.ipynb  legacy_explicit_time.ipynb  legacy_neuralfield.ipynb  neural.ipynb  neural_hash.ipynb  neural_hash_time.ipynb  neural_time.ipynb  refactored_explicit.ipynb  refactored_explicit_time.ipynb  refactored_neural.ipynb
examples_ipynb/experimental/: compare_explicit.ipynb  prob_explicit.ipynb
examples_py/: explicit.py  explicit_time.py  neural.py  neural_hash.py  neural_hash_time.py  neural_time.py
examples_py/experimental/: compare_explicit.py  prob_explicit.py
legacy/: bfield.py  explicit.py  uncertainty.py  utils.py
models/: bfield.py  explicit.py  neural_fields.py  plot_params.py  uncertainty.py  utils.py
scripts/: run_benchmarks.py
src/neural_wfa/: __init__.py
src/neural_wfa/analysis/: metrics.py  uncertainty.py
src/neural_wfa/core/: magnetic_field.py  observation.py  problem.py
src/neural_wfa/nn/: __init__.py  architectures.py  encoding.py  mlp.py
src/neural_wfa/optimization/: __init__.py  loss.py  neural_solver.py  pixel_solver.py  solver.py  trainers.py
src/neural_wfa/physics/: __init__.py  derivatives.py  extrapolation.py  lines.py
src/neural_wfa/probabilistic/: field.py  (+3 more)
tests/: test_uncertainty_benchmarks.py
(+6 files in other folders)
